# sashank-personal-blog

./: .gitignore  build.go  go.mod  go.sum  main.go
blogs/Mountainhead-review/: index.md  metadata.yaml
blogs/hello-world/: index.md  metadata.yaml
python_scripts/book_transcription/: .gitignore  README.md  ocr_output.json  pyproject.toml
python_scripts/book_transcription/src/book_transcription/: __init__.py  ebook_test.py  split_pdf_to_img.py  transcribe_book.py
python_scripts/book_transcription/src/book_transcription/from_sepoy_to_subedar/: write_ebook.py
python_scripts/book_transcription/src/book_transcription/from_sepoy_to_subedar/raw_content/: acknowledgements.xhtml  dedication.xhtml  editorial_note.xhtml  escape_from_slavery.xhtml  foreward_by_sita_ram.xhtml  ghazni_and_kabul.xhtml  preface_by_translator.xhtml  return_to_the_village.xhtml  the_bulwark_of_hindustan.xhtml  the_first_sikh_war.xhtml  the_gurkha_war.xhtml  the_lovely_thakurin.xhtml  the_march_into_afghanistan.xhtml  the_pensioner.xhtml  the_pindari_war.xhtml  the_retreat_from_kabul.xhtml  the_second_sikh_war.xhtml  title_page.xhtml  translator_description.xhtml
python_scripts/book_transcription/src/book_transcription/on_the_meaning_of_the_mahabharatha/: write_ebook.py
python_scripts/book_transcription/src/book_transcription/on_the_meaning_of_the_mahabharatha/raw_content/: introductory_note.xhtml  lecture_1.xhtml  lecture_2.xhtml  lecture_3.xhtml
static/css/: style.css
templates/: base.html  book.html  books.html  chapter.html  home.html  post.html  posts.html
title-page/: index.md
(+23 files in other folders)
