[project]
name = "book-transcription"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "sashanktirumala", email = "sashanktirumala1@gmail.com" }
]
dependencies = [
    "mistralai>=1.9.3",
    "ebooklib>=0.19",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/book_transcription"]
